--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -55,13 +55,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/cardview_dark_background"
-        android:src="@drawable/record_icon"
+        android:src="@drawable/record_btn_stopped"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ImageButton
         android:id="@+id/record_list_btn"
-        android:background="@android:color/white"
+        android:background="@color/cardview_dark_background"
         app:layout_constraintTop_toTopOf="@id/record_btn"
         app:layout_constraintBottom_toBottomOf="@id/record_btn"
         app:layout_constraintStart_toEndOf="@id/record_btn"
