--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
-    android:background="@color/cardview_dark_background"
+    android:background="@color/colorAccent"
     tools:context=".RecordFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -27,7 +27,7 @@
         android:text="@string/record_fragment"
         android:textSize="18sp"
         android:lineHeight="32dp"
-        android:textColor="@color/cardview_light_background"
+        android:textColor="@color/colorTextMain"
         android:textAlignment="center"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
@@ -54,14 +54,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/colorAccent"
         android:src="@drawable/record_btn_stopped"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ImageButton
         android:id="@+id/record_list_btn"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/colorAccent"
         app:layout_constraintTop_toTopOf="@id/record_btn"
         app:layout_constraintBottom_toBottomOf="@id/record_btn"
         app:layout_constraintStart_toEndOf="@id/record_btn"
