--- a/app/src/main/res/layout/record_page_viewer.xml
+++ b/app/src/main/res/layout/record_page_viewer.xml
@@ -5,7 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:navGraph="@navigation/nav_graph"
+        app:defaultNavHost="true"
+        />
 
 
 
