--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
-    android:background="@color/colorAccent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".RecordFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -15,7 +15,7 @@
         android:layout_width="316dp"
         android:layout_height="123dp"
         android:layout_marginTop="64dp"
-        android:src="@drawable/bckup_prototype_1"
+        android:src="@mipmap/bckup_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +44,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="64dp"
         android:textSize="64sp"
-        android:textColor="@color/cardview_light_background"
+        android:textColor="@color/colorTextMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -54,14 +54,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimaryDark"
         android:src="@drawable/record_btn_stopped"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ImageButton
         android:id="@+id/record_list_btn"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintTop_toTopOf="@id/record_btn"
         app:layout_constraintBottom_toBottomOf="@id/record_btn"
         app:layout_constraintStart_toEndOf="@id/record_btn"
