--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#181818</color>
-    <color name="colorAccent">#5a5a5a</color>
-    <color name="colorTextMain">#E3E3E3</color>
+    <color name="colorPrimary">#02648C</color>
+    <color name="colorPrimaryDark">#333333</color>
+    <color name="colorAccent">#04d8d8</color>
+    <color name="colorTextMain">#FFFFFF</color>
 </resources>
