check record error

--- a/app/src/main/res/layout/fragment_audio.xml
+++ b/app/src/main/res/layout/fragment_audio.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".AudioFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/return_fab"
         android:layout_width="wrap_content"
@@ -15,7 +15,8 @@
         android:layout_margin="@dimen/fab_margin"
         android:background="@color/colorPrimaryDark"
         android:clickable="true"
-        android:src="@android:drawable/ic_menu_revert" />
+        android:src="@android:drawable/ic_media_rew"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/audio_list"
