--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -15,7 +15,7 @@
         android:layout_width="316dp"
         android:layout_height="123dp"
         android:layout_marginTop="64dp"
-        android:src="@mipmap/bckup_logo"
+        android:src="@mipmap/bckup_main_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,34 +43,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="64dp"
-        android:textSize="64sp"
+        android:textSize="40sp"
         android:textColor="@color/colorTextMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ImageButton
         android:id="@+id/record_btn"
-        app:layout_constraintTop_toBottomOf="@id/record_timer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/colorPrimaryDark"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:background="@color/transparent"
         android:src="@drawable/record_btn_stopped"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <ImageButton
-        android:id="@+id/record_list_btn"
-        android:background="@color/colorPrimaryDark"
-        app:layout_constraintTop_toTopOf="@id/record_btn"
-        app:layout_constraintBottom_toBottomOf="@id/record_btn"
-        app:layout_constraintStart_toEndOf="@id/record_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="16dp"
-        android:src="@drawable/recorder_list_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/record_timer"
+        />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/record_list_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/transparent"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/recorder_list_btn"
+        app:layout_constraintBottom_toBottomOf="@id/record_timer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@id/record_timer"
+        app:layout_constraintTop_toTopOf="@id/record_timer"
+         />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
