--- a/app/src/main/res/layout/player_sheet.xml
+++ b/app/src/main/res/layout/player_sheet.xml
@@ -23,16 +23,16 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/song_icon"
+            android:layout_width="71dp"
+            android:layout_height="match_parent"
             android:layout_weight="4"
             android:paddingTop="16sp"
             android:paddingBottom="16sp"
             app:srcCompat="@drawable/player_header_icon" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/play_sheet_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -43,7 +43,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/now_playing_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
